{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 58,
  "lineage": "f300deed-17ec-2161-b38c-33ec072a0e5b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "LB-WebServers",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/loadBalancers/LB-WebServers/frontendIPConfigurations/Frontend-IPconfig",
                "name": "Frontend-IPconfig",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/publicIPAddresses/PublicIP-LB"
              }
            ],
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/loadBalancers/LB-WebServers",
            "location": "eastus",
            "name": "LB-WebServers",
            "resource_group_name": "production-resources",
            "sku": "Basic",
            "tags": {
              "webserver-env": "Production"
            }
          },
          "dependencies": [
            "azurerm_public_ip.PublicIP-LB",
            "azurerm_resource_group.RG-WebServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "BackEndAddressPool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkInterfaces/VNIC-WebServer3/ipConfigurations/IPconfig3",
              "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkInterfaces/VNIC-WebServer1/ipConfigurations/IPconfig1",
              "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkInterfaces/VNIC-WebServer2/ipConfigurations/IPconfig2"
            ],
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/loadBalancers/LB-WebServers/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/loadBalancers/LB-WebServers",
            "name": "BackEndAddressPool",
            "resource_group_name": "production-resources"
          },
          "dependencies": [
            "azurerm_lb.LB-WebServers",
            "azurerm_public_ip.PublicIP-LB",
            "azurerm_resource_group.RG-WebServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "VNIC-WebServer1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkInterfaces/VNIC-WebServer1",
            "internal_domain_name_suffix": "mn0gpqzk3qmelo3uwqqkpjqvch.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "IPconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/publicIPAddresses/PublicIP-WebServer1",
                "subnet_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/virtualNetworks/production-network/subnets/Subnet-WebServers"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-8F-EB-2D",
            "name": "VNIC-WebServer1",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "production-resources",
            "tags": {
              "webserver-env": "Production"
            },
            "virtual_machine_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Compute/virtualMachines/WebServer1"
          },
          "dependencies": [
            "azurerm_public_ip.PublicIP-WebServer1",
            "azurerm_resource_group.RG-WebServers",
            "azurerm_subnet.Subnet-WebServers",
            "azurerm_virtual_network.VNET-WebServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "VNIC-WebServer2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkInterfaces/VNIC-WebServer2",
            "internal_domain_name_suffix": "mn0gpqzk3qmelo3uwqqkpjqvch.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "IPconfig2",
                "primary": true,
                "private_ip_address": "10.0.0.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/publicIPAddresses/PublicIP-WebServer2",
                "subnet_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/virtualNetworks/production-network/subnets/Subnet-WebServers"
              }
            ],
            "location": "eastus",
            "name": "VNIC-WebServer2",
            "private_ip_address": "10.0.0.6",
            "private_ip_addresses": [
              "10.0.0.6"
            ],
            "resource_group_name": "production-resources",
            "tags": {
              "webserver-env": "Production"
            }
          },
          "dependencies": [
            "azurerm_public_ip.PublicIP-WebServer2",
            "azurerm_resource_group.RG-WebServers",
            "azurerm_subnet.Subnet-WebServers",
            "azurerm_virtual_network.VNET-WebServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "VNIC-WebServer3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkInterfaces/VNIC-WebServer3",
            "internal_domain_name_suffix": "mn0gpqzk3qmelo3uwqqkpjqvch.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "IPconfig3",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/publicIPAddresses/PublicIP-WebServer3",
                "subnet_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/virtualNetworks/production-network/subnets/Subnet-WebServers"
              }
            ],
            "location": "eastus",
            "name": "VNIC-WebServer3",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "production-resources",
            "tags": {
              "webserver-env": "Production"
            }
          },
          "dependencies": [
            "azurerm_public_ip.PublicIP-WebServer3",
            "azurerm_resource_group.RG-WebServers",
            "azurerm_subnet.Subnet-WebServers",
            "azurerm_virtual_network.VNET-WebServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "LB-VNIC-WebServer1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/loadBalancers/LB-WebServers/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkInterfaces/VNIC-WebServer1/ipConfigurations/IPconfig1|/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/loadBalancers/LB-WebServers/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "IPconfig1",
            "network_interface_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkInterfaces/VNIC-WebServer1"
          },
          "dependencies": [
            "azurerm_lb.LB-WebServers",
            "azurerm_lb_backend_address_pool.BackEndAddressPool",
            "azurerm_network_interface.VNIC-WebServer1",
            "azurerm_public_ip.PublicIP-LB",
            "azurerm_public_ip.PublicIP-WebServer1",
            "azurerm_resource_group.RG-WebServers",
            "azurerm_subnet.Subnet-WebServers",
            "azurerm_virtual_network.VNET-WebServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "LB-VNIC-WebServer2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/loadBalancers/LB-WebServers/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkInterfaces/VNIC-WebServer2/ipConfigurations/IPconfig2|/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/loadBalancers/LB-WebServers/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "IPconfig2",
            "network_interface_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkInterfaces/VNIC-WebServer2"
          },
          "dependencies": [
            "azurerm_lb.LB-WebServers",
            "azurerm_lb_backend_address_pool.BackEndAddressPool",
            "azurerm_network_interface.VNIC-WebServer2",
            "azurerm_public_ip.PublicIP-LB",
            "azurerm_public_ip.PublicIP-WebServer2",
            "azurerm_resource_group.RG-WebServers",
            "azurerm_subnet.Subnet-WebServers",
            "azurerm_virtual_network.VNET-WebServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "LB-VNIC-WebServer3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/loadBalancers/LB-WebServers/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkInterfaces/VNIC-WebServer3/ipConfigurations/IPconfig3|/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/loadBalancers/LB-WebServers/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "IPconfig3",
            "network_interface_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkInterfaces/VNIC-WebServer3"
          },
          "dependencies": [
            "azurerm_lb.LB-WebServers",
            "azurerm_lb_backend_address_pool.BackEndAddressPool",
            "azurerm_network_interface.VNIC-WebServer3",
            "azurerm_public_ip.PublicIP-LB",
            "azurerm_public_ip.PublicIP-WebServer3",
            "azurerm_resource_group.RG-WebServers",
            "azurerm_subnet.Subnet-WebServers",
            "azurerm_virtual_network.VNET-WebServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "VNIC-NSG-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkInterfaces/VNIC-WebServer1|/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkSecurityGroups/production-nsgs",
            "network_interface_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkInterfaces/VNIC-WebServer1",
            "network_security_group_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkSecurityGroups/production-nsgs"
          },
          "dependencies": [
            "azurerm_network_interface.VNIC-WebServer1",
            "azurerm_network_security_group.NSG-WebServers",
            "azurerm_public_ip.PublicIP-WebServer1",
            "azurerm_resource_group.RG-WebServers",
            "azurerm_subnet.Subnet-WebServers",
            "azurerm_virtual_network.VNET-WebServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "VNIC-NSG-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkInterfaces/VNIC-WebServer2|/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkSecurityGroups/production-nsgs",
            "network_interface_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkInterfaces/VNIC-WebServer2",
            "network_security_group_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkSecurityGroups/production-nsgs"
          },
          "dependencies": [
            "azurerm_network_interface.VNIC-WebServer2",
            "azurerm_network_security_group.NSG-WebServers",
            "azurerm_public_ip.PublicIP-WebServer2",
            "azurerm_resource_group.RG-WebServers",
            "azurerm_subnet.Subnet-WebServers",
            "azurerm_virtual_network.VNET-WebServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "VNIC-NSG-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkInterfaces/VNIC-WebServer3|/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkSecurityGroups/production-nsgs",
            "network_interface_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkInterfaces/VNIC-WebServer3",
            "network_security_group_id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkSecurityGroups/production-nsgs"
          },
          "dependencies": [
            "azurerm_network_interface.VNIC-WebServer3",
            "azurerm_network_security_group.NSG-WebServers",
            "azurerm_public_ip.PublicIP-WebServer3",
            "azurerm_resource_group.RG-WebServers",
            "azurerm_subnet.Subnet-WebServers",
            "azurerm_virtual_network.VNET-WebServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG-WebServers",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkSecurityGroups/production-nsgs",
            "location": "eastus",
            "name": "production-nsgs",
            "resource_group_name": "production-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowLocalInbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "10.0.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowLocalOutbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "10.0.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "webserver-env": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG-WebServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowLocalInbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.0.0/24",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkSecurityGroups/production-nsgs/securityRules/AllowLocalInbound",
            "name": "AllowLocalInbound",
            "network_security_group_name": "production-nsgs",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "production-resources",
            "source_address_prefix": "10.0.0.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.NSG-WebServers",
            "azurerm_resource_group.RG-WebServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowLocalOutbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.0.0/24",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/networkSecurityGroups/production-nsgs/securityRules/AllowLocalOutbound",
            "name": "AllowLocalOutbound",
            "network_security_group_name": "production-nsgs",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "production-resources",
            "source_address_prefix": "10.0.0.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.NSG-WebServers",
            "azurerm_resource_group.RG-WebServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PublicIP-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/publicIPAddresses/PublicIP-LB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.188.57.10",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "PublicIP-LB",
            "resource_group_name": "production-resources",
            "sku": "Basic",
            "tags": {
              "webserver-env": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.RG-WebServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PublicIP-WebServer1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/publicIPAddresses/PublicIP-WebServer1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.76.15.237",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "PublicIP-WebServer1",
            "resource_group_name": "production-resources",
            "sku": "Basic",
            "tags": {
              "webserver-env": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.RG-WebServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PublicIP-WebServer2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/publicIPAddresses/PublicIP-WebServer2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.87.27.239",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "PublicIP-WebServer2",
            "resource_group_name": "production-resources",
            "sku": "Basic",
            "tags": {
              "webserver-env": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.RG-WebServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PublicIP-WebServer3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/publicIPAddresses/PublicIP-WebServer3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.76.16.193",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "PublicIP-WebServer3",
            "resource_group_name": "production-resources",
            "sku": "Basic",
            "tags": {
              "webserver-env": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.RG-WebServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Subnet-WebServers",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/virtualNetworks/production-network/subnets/Subnet-WebServers",
            "name": "Subnet-WebServers",
            "resource_group_name": "production-resources",
            "virtual_network_name": "production-network"
          },
          "dependencies": [
            "azurerm_resource_group.RG-WebServers",
            "azurerm_virtual_network.VNET-WebServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VNET-WebServers",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "c3677463-ec2a-4518-bbb4-b420a7a61517",
            "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/virtualNetworks/production-network",
            "location": "eastus",
            "name": "production-network",
            "resource_group_name": "production-resources",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/8f1f9ef1-522d-49f2-b4c5-5cf775f1769a/resourceGroups/production-resources/providers/Microsoft.Network/virtualNetworks/production-network/subnets/Subnet-WebServers",
                "name": "Subnet-WebServers"
              }
            ],
            "tags": {
              "webserver-env": "Production"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.RG-WebServers"
          ]
        }
      ]
    }
  ]
}